--- a/less/home-page.less
+++ b/less/home-page.less
@@ -188,7 +188,7 @@
             font-size: 1.5rem;
             text-align: center;
             @media @tablet{
-                font-size: 1.2rem;
+                font-size: 1rem;
             }
         }
     }
@@ -205,7 +205,7 @@
                 margin-top: 5%;
             }
             p{
-                font-size: 1.2rem;
+                font-size: 1rem;
                 padding-left: 50px;
                 padding-right: 50px;
             }
